--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,19 @@ dependencies:
   flutter_svg:
   intl_phone_number_input: ^0.7.0+2
   font_awesome_flutter: ^10.1.0
+  http: ^0.13.5
+  dio: ^4.0.6
+  shared_preferences: ^2.0.15
+  socket_io_client: ^2.0.0
+  intl: ^0.17.0
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  geolocator: ^9.0.1
+  permission_handler: ^10.0.0
+  google_maps_flutter: ^2.2.0
+  animate_do: ^2.1.0
+  google_polyline_algorithm: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +93,8 @@ flutter:
     - Assets/Images/backGroundMap.png
     - Assets/Images/mapDetalle.png
     - Assets/Images/lineDetalle.png
+    - Assets/Images/finishPlace.png
+    - Assets/Images/startPlace.png
     - Assets/Images/bigcarSimple.svg
     - Assets/Images/bigcarSimpleYellow.svg
     - Assets/Images/carSimpleYellow.svg
